<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SmartChapters</string>
    <string name="magnometer">Measuring electromagnetic fields:</string>
    <string name="action_settings">Settings</string>
    <string name="button_measure_without_book">Save values</string>
    <string name="result_with_book_closed">---</string>
    <string name="button_continue_to_list">Continue</string>
    <string name="measurement2">---</string>
    <string name="title_activity_reading_note_list_activity">All Notes</string>
    <string name="title_activity_reading_note_view">Note Details</string>
    <string name="button_new_note_button">New note</string>
    <string name="title_activity_create_reading_note_actvity">CreateReadingNoteActvity</string>
    <string name="new_note_description">Take a new note here:</string>
    <string name="button_save_new_note">Save Note</string>
    <string name="button_edit_note">Edit Note</string>
    <string name="title_activity_reading_note_edit">ReadingNoteEditActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="edit_note_description">Edit your note:</string>
    <string name="button_save_note">Update Note</string>
    <string name="button_delete_note">Delete Note</string>
    <string name="instruction_1">1. Make sure the book is away from the phone and click \'save values\' below.</string>
    <string name="instruction_2">2. Place the phone above the closed book so that the measured values are highest and click \'save values\'.</string>
    <string name="button_measure_with_closed_book">Save values</string>
    <string name="note_title_measurements">(Debug) Measured X values to calculate chapter:</string>

</resources>
